--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,19 @@
 
 p {
     color: red;
-    font-size: 30px;
+    font-size: 50px;
     font-family: fantasy;
     text-align: justify;
 }
 
 body {
     background-image: url("https://image.freepik.com/free-vector/grey-linen-texture-background_1053-253.jpg");
+}
+
+h2 {
+    font-size: 50px;
+}
+
+h1 {
+    font-size: 50px;
 }
